--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,21 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<Header>
+		<div class="grid grid-cols-2 gap-4">
+			<div class="col-span-1">
+				<h1 class="font-bold text-6xl">Get More Done with whitepace</h1>
+				<p class="text-lg mt-6">
+					Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks
+				</p>
+			</div>
+			<div class="col-span-1">
+				<img src="/images/hero.png" alt="Hero Image" class="w-full" />
+			</div>
+
+		</div>
+	</Header>
 </Layout>
