--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,6 +1,7 @@
 ---
-
+const { class: className } = Astro.props;
 ---
-<div class="container mx-auto px-4">
-    <slot></slot>    
+
+<div class:list={["max-w-screen-xl mx-auto px-5", className]}>
+  <slot />
 </div>
