--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,16 +1,17 @@
 ---
 type Props = {
   path: string;
-  name: string;
+  title: string;
 };
 
-const { path, name } = Astro.props;
+const { path, title } = Astro.props;
 ---
+
 <li>
   <a
     href={path}
-    class={`block rounded py-2 px-3 md:p-0 bg-primary-700 hover:bg-primary-600 md:bg-transparent md:hover:bg-transparent text-neutral-50 md:hover:text-white`}
+    class={"flex py-2 px-3 md:p-0 items-center rounded hover:bg-gray-200 md:hover:bg-transparent text-gray-700 hover:text-gray-950"}
   >
-    {name}
+    <span> {title} </span>
   </a>
 </li>
