--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,68 +1,66 @@
 ---
-import logoBlanco from "../assets/logo-blanco.svg";
 import Container from "./Container.astro";
+import logo from "../assets/logo.svg";
 import Link from "./Link.astro";
-import ToggleMenu from "./ToggleMenu.astro";
 
-const routes = [
+const menuItems = [
   {
-    name: "Inicio",
+    title: "Inicio",
     path: "/",
   },
   {
-    name: "Quiénes Somos",
+    title: "Quiénes Somos",
     path: "/about",
   },
   {
-    name: "Portafolio",
-    path: "/portfolio",
-  },
-  {
-    name: "Blog o Recursos",
+    title: "Blog o Recursos",
     path: "/blog",
   },
   {
-    name: "Contacto",
+    title: "Contacto",
     path: "/contact",
   },
 ];
 ---
 
-<nav class="bg-primary-800 text-neutral-50 p-4">
-  <Container>
-    <div class="flex flex-wrap items-center justify-between">
+<Container>
+  <header class="flex flex-col md:flex-row justify-between items-center my-5">
+    <div class="flex items-center w-full md:w-auto justify-between">
       <a href="/">
-        <img src={logoBlanco.src} alt="Logo de la empresa" class="h-10" />
+        <img src={logo.src} class="h-14" alt="Logo" />
       </a>
 
-      <div class="flex items-center md:hidden">
-        <ToggleMenu />
+      <div class="block md:hidden">
+        <button
+          id="menu-button"
+          class="p-2 rounded cursor-pointer focus:border-2"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="size-6"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm8.25 5.25a.75.75 0 0 1 .75-.75h8.25a.75.75 0 0 1 0 1.5H12a.75.75 0 0 1-.75-.75Z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
       </div>
 
-      <button id="menu-button" class="md:hidden p-2 rounded cursor-pointer">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-          class="size-6"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm8.25 5.25a.75.75 0 0 1 .75-.75h8.25a.75.75 0 0 1 0 1.5H12a.75.75 0 0 1-.75-.75Z"
-            clip-rule="evenodd"></path>
-        </svg>
-      </button>
-
-      <div class="hidden w-full md:block md:w-auto" id="menu">
-        <ul
-          class="flex flex-col md:flex-row p-4 md:p-0 rounded-lg md:space-x-8 md:bg-primary-800 bg-primary-700 mt-4 md:mt-0"
-        >
-          {routes.map((route) => <Link path={route.path} name={route.name} />)}
-        </ul>
-      </div>
     </div>
-  </Container>
-</nav>
+    <nav class="hidden w-full md:w-auto mt-2 md:flex md:mt-0" id="menu">
+      <ul class="flex flex-col md:flex-row md:gap-3">
+        {
+          menuItems.map(({ title, path }) => (
+            <Link title={title} path={path} />
+          ))
+        }
+      </ul>
+    </nav>
+  </header>
+</Container>
 
 <script>
   const $ = (key: string) => document.querySelector(key);
