--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,14 @@
 ---
-import Navbar from "~/components/Navbar.astro";
 import "../styles/global.css";
-import CommonMeta from "~/components/common/CommonMeta.astro";
+import Navbar from "~/components/Navbar.astro";
+import Footer from "~/components/Footer.astro";
+
+type Props = {
+  title?: string;
+}
+
+const {title = 'Munyaal'} = Astro.props;
+
 ---
 
 <!doctype html>
@@ -11,13 +18,13 @@ import CommonMeta from "~/components/common/CommonMeta.astro";
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>{title}</title>
   </head>
   <body>
     <Navbar />
 
-    <main>
-      <slot />
-    </main>
+    <slot />
+    
+    <Footer />
   </body>
 </html>
