--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -10,7 +10,7 @@ const { path, title } = Astro.props;
 <li>
   <a
     href={path}
-    class={"flex py-2 px-3 md:p-0 items-center rounded hover:bg-gray-200 md:hover:bg-transparent text-gray-700 hover:text-gray-950"}
+    class={"flex py-2 px-3 md:p-0 items-center rounded hover:bg-neutral-200 md:hover:bg-transparent text-neutral-700 hover:text-neutral-950 text-base md:text-lg"}
   >
     <span> {title} </span>
   </a>
