--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,50 @@
 ---
-import Header from '../components/Header.astro';
-import Layout from '../layouts/Layout.astro';
+import Container from "~/components/Container.astro";
+import Layout from "~/layouts/Layout.astro";
+import Person from "~/components/Person.astro";
+import background from "~/assets/background.png";
 ---
 
 <Layout>
-	<Header>
-		<h1 class="font-bold">Hello World</h1>
-	</Header>
+  <Container class="space-y-16">
+    <header class="space-y-8 mx-auto max-w-4xl">
+      <h1 class="text-4xl md:text-6xl font-medium text-center">
+        Quiénes Somos
+      </h1>
+
+      <p class="text-base md:text-lg">
+        Somos un grupo de jóvenes apasionados por la tecnología y el desarrollo
+        de software. Fundamos nuestra empresa en el 2018, en Playa del Carmen,
+        con el sueño de transformar ideas en soluciones innovadoras que impulsen
+        negocios y mejoren procesos.
+      </p>
+    </header>
+
+    <section
+      class="space-y-4 mx-auto max-w-4xl py-16 bg-center bg-no-repeat"
+      style={{ backgroundImage: `url(${background.src})` }}
+    >
+      <h2 class="text-2xl md:text-4xl font-medium text-center">
+        Equipo de trabajo
+      </h2>
+
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+        <Person
+          name="Alex Pech"
+          role="Desarrollador Full Stack"
+          picture="https://images.unsplash.com/photo-1580489944761-15a19d654956?&fit=crop&w=280"
+        />
+        <Person
+          name="Caleb Mora"
+          role="Project Manager"
+          picture="https://images.unsplash.com/photo-1633332755192-727a05c4013d?&fit=crop&w=280"
+        />
+        <Person
+          name="Leonardo Alvarez"
+          role="Desarrollador Full Stack"
+          picture="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?&fit=crop&w=280"
+        />
+      </div>
+    </section>
+  </Container>
 </Layout>
