--- a/src/components/Person.astro
+++ b/src/components/Person.astro
@@ -13,7 +13,7 @@ const { name, role, picture } = Astro.props;
     <img
       src={picture}
       alt={name}
-      class="w-full rounded-md rounded transition group-hover:-translate-y-1 group-hover:shadow-xl bg-white object-cover object-center aspect-square"
+      class="w-full rounded transition group-hover:-translate-y-1 group-hover:shadow-xl bg-white object-cover object-center aspect-square"
     />
   </div>
   <div class="mt-4 text-center">
