--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,18 +1,20 @@
 ---
-import Container from "~/components/Container.astro";
 import Layout from "~/layouts/Layout.astro";
 import Person from "~/components/Person.astro";
 import background from "~/assets/background.png";
 ---
 
 <Layout>
-  <Container class="space-y-16">
-    <header class="space-y-8 mx-auto max-w-4xl">
+  <div
+    class="bg-center bg-no-repeat space-y-16"
+    style={{ backgroundImage: `url(${background.src})` }}
+  >
+    <header class="space-y-8 mx-auto max-w-4xl px-4">
       <h1 class="text-4xl md:text-6xl font-medium text-center">
         Quiénes Somos
       </h1>
 
-      <p class="text-base md:text-lg">
+      <p class="text-base md:text-lg text-center">
         Somos un grupo de jóvenes apasionados por la tecnología y el desarrollo
         de software. Fundamos nuestra empresa en el 2018, en Playa del Carmen,
         con el sueño de transformar ideas en soluciones innovadoras que impulsen
@@ -21,8 +23,7 @@ import background from "~/assets/background.png";
     </header>
 
     <section
-      class="space-y-4 mx-auto max-w-4xl py-16 bg-center bg-no-repeat"
-      style={{ backgroundImage: `url(${background.src})` }}
+      class="space-y-4 mx-auto max-w-4xl px-4 py-10"
     >
       <h2 class="text-2xl md:text-4xl font-medium text-center">
         Equipo de trabajo
@@ -46,5 +47,5 @@ import background from "~/assets/background.png";
         />
       </div>
     </section>
-  </Container>
+  </div>
 </Layout>
