--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,10 +1,146 @@
 ---
-import Header from '../components/Header.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from "~/layouts/Layout.astro";
+import background from "~/assets/background.png";
 ---
 
 <Layout>
-	<Header>
-		<h1 class="font-bold text-6xl">Get More Done with whitepace</h1>
-	</Header>
+  <div
+    class="bg-center bg-no-repeat space-y-16"
+    style={{ backgroundImage: `url(${background.src})` }}
+  >
+    <header class="space-y-8 mx-auto max-w-4xl px-4">
+      <h1 class="text-4xl md:text-6xl font-medium text-center">Contactanos</h1>
+
+      <p class="text-base md:text-lg text-center">
+        ¡Estamos listos para ayudarte a transformar tus ideas en realidad!
+      </p>
+    </header>
+
+    <section class="mx-auto max-w-4xl py-10 px-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+        <div class="space-y-4">
+          <h2 class="text-2xl md:text-4xl font-medium">Habla con nosotros</h2>
+          <p class="text-base md:text-lg">
+            ¿Tienes alguna duda o idea en mente? ¡Estamos aquí para ayudarte!
+            Rellena el formulario, envíanos un correo o llámanos.
+          </p>
+
+          <ul class="space-y-2">
+            <li class="text-neutral-600">
+              <a
+                href="https://maps.app.goo.gl/LzyqKkyVEBCheLdUA"
+                target="_blank"
+                rel="noopener"
+                aria-label="Maps"
+                class="flex items-center gap-1"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-4"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"></path>
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
+                  ></path>
+                </svg>
+                <span>Mundo Hábitat, 77714 Playa del Carmen, Q.R.</span>
+              </a>
+            </li>
+            <li class="text-neutral-600">
+              <a
+                href="mailto:developers@munyaal.app"
+                class="flex items-center gap-1"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-4"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+                  ></path>
+                </svg>
+                <span>developers@munyaal.app</span>
+              </a>
+            </li>
+            <li class="text-neutral-600">
+              <a href="tel:+9841309862" class="flex items-center gap-1">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-4"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"
+                  ></path>
+                </svg>
+                <span>+52 984 130 9862</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <form action="">
+            <div>
+              <label for="name">Nombre:</label>
+
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                minlength="4"
+                maxlength="8"
+              />
+            </div>
+
+            <div>
+              <label for="name">Nombre:</label>
+
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                minlength="4"
+                maxlength="8"
+              />
+            </div>
+
+            <div>
+              <label for="name">Nombre:</label>
+
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                minlength="4"
+                maxlength="8"
+              />
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+  </div>
 </Layout>
