--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -99,45 +99,46 @@ import background from "~/assets/background.png";
           </ul>
         </div>
         <div>
-          <form action="">
-            <div>
-              <label for="name">Nombre:</label>
+          <form class="flex flex-col gap-4">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              placeholder="Nombre completo"
+              class="px-4 py-2 rounded border border-neutral-600 focus:border-primary-600 focus:outline-primary bg-white"
+            />
+            <input
+              type="text"
+              id="email"
+              name="email"
+              required
+              placeholder="Correo electrónico"
+              class="px-4 py-2 rounded border border-neutral-600 focus:border-primary-600 focus:outline-primary bg-white"
+            />
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              required
+              placeholder="Número de teléfono"
+              class="px-4 py-2 rounded border border-neutral-600 focus:border-primary-600 focus:outline-primary bg-white"
+            />
+            <textarea
+              name="message"
+              id="message"
+              placeholder="Mensaje"
+              class="px-4 py-2 rounded border border-neutral-600 focus:border-primary-600 focus:outline-primary bg-white h-24"
+            ></textarea>
 
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                minlength="4"
-                maxlength="8"
-              />
-            </div>
-
-            <div>
-              <label for="name">Nombre:</label>
-
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                minlength="4"
-                maxlength="8"
-              />
-            </div>
-
-            <div>
-              <label for="name">Nombre:</label>
-
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                minlength="4"
-                maxlength="8"
-              />
-            </div>
+            <button
+              class="bg-primary text-white hover:opacity-90 px-5 py-2.5 rounded-lg flex justify-center gap-1 cursor-pointer"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 12 3.269 3.125A59.769 59.769 0 0 1 21.485 12 59.768 59.768 0 0 1 3.27 20.875L5.999 12Zm0 0h7.5" />
+              </svg>            
+              <span>Enviar mensaje</span>
+            </button>
           </form>
         </div>
       </div>
