--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,8 +19,8 @@ const menuItems = [
 ];
 ---
 
-<Container>
-  <header class="flex flex-col md:flex-row justify-between items-center my-5">
+<header class="py-5 bg-white">
+  <Container class="flex flex-col md:flex-row justify-between items-center">
     <div class="flex items-center w-full md:w-auto justify-between">
       <a href="/">
         <img src={logo.src} class="h-14" alt="Logo" />
@@ -44,19 +44,14 @@ const menuItems = [
           </svg>
         </button>
       </div>
-
     </div>
     <nav class="hidden w-full md:w-auto mt-2 md:flex md:mt-0" id="menu">
       <ul class="flex flex-col md:flex-row md:gap-3">
-        {
-          menuItems.map(({ title, path }) => (
-            <Link title={title} path={path} />
-          ))
-        }
+        {menuItems.map(({ title, path }) => <Link title={title} path={path} />)}
       </ul>
     </nav>
-  </header>
-</Container>
+  </Container>
+</header>
 
 <script>
   const $ = (key: string) => document.querySelector(key);
