--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,13 +2,13 @@
 import "../styles/global.css";
 import Navbar from "~/components/Navbar.astro";
 import Footer from "~/components/Footer.astro";
+import background from "~/assets/background.png";
 
 type Props = {
   title?: string;
-}
+};
 
-const {title = 'Munyaal'} = Astro.props;
-
+const { title = "Munyaal" } = Astro.props;
 ---
 
 <!doctype html>
@@ -20,11 +20,14 @@ const {title = 'Munyaal'} = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body
+    class="bg-cover bg-center bg-no-repeat"
+    style={{ backgroundImage: `url(${background.src})` }}
+  >
     <Navbar />
 
     <slot />
-    
+
     <Footer />
   </body>
 </html>
