--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,10 @@
 ---
 import Layout from "~/layouts/Layout.astro";
 import Person from "~/components/Person.astro";
-import background from "~/assets/background.png";
 ---
 
 <Layout>
-  <div
-    class="bg-center bg-no-repeat space-y-16"
-    style={{ backgroundImage: `url(${background.src})` }}
-  >
+  <div class="space-y-16">
     <header class="space-y-8 mx-auto max-w-4xl px-4">
       <h1 class="text-4xl md:text-6xl font-medium text-center">
         Quiénes Somos
