--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,6 @@ import Layout from "~/layouts/Layout.astro";
 import Container from "~/components/Container.astro";
 import FeatureCard from "~/components/FeatureCard.astro";
 import hello from "~/assets/illustrations/hello.svg";
-import background from "~/assets/background.png";
 import ilogs from "~/assets/logos/ilogs.svg";
 import luums from "~/assets/logos/luums.svg";
 ---
@@ -11,8 +10,7 @@ import luums from "~/assets/logos/luums.svg";
 <Layout title="Munyaal">
   <!-- Header -->
   <section
-    class="pt-16 pb-24 bg-cover bg-center bg-no-repeat"
-    style={{ backgroundImage: `url(${background.src})` }}
+    class="pt-16 pb-24"
   >
     <Container>
       <header class="grid grid-cols-1 md:grid-cols-2 gap-4">
