--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,7 @@ import luums from "~/assets/logos/luums.svg";
 
 <Layout title="Munyaal">
   <!-- Header -->
-  <section
-    class="pt-16 pb-24"
-  >
+  <section class="pt-16 pb-24">
     <Container>
       <header class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="col-span-2 md:col-span-1 flex items-center">
@@ -23,25 +21,27 @@ import luums from "~/assets/logos/luums.svg";
               Impulsa el crecimiento de tu negocio con nuestras soluciones de
               software innovadoras y a la medida.
             </p>
-            <button
-              class="bg-primary text-white hover:opacity-90 px-5 py-2.5 rounded-lg flex gap-1 cursor-pointer"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                class="size-6"
+            <a href={"/contact"}>
+              <button
+                class="bg-primary text-white hover:opacity-90 px-5 py-2.5 rounded-lg flex gap-1 cursor-pointer"
               >
-                <path
-                  d="M10.5 18.75a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5h-3Z"
-                ></path>
-                <path
-                  fill-rule="evenodd"
-                  d="M8.625.75A3.375 3.375 0 0 0 5.25 4.125v15.75a3.375 3.375 0 0 0 3.375 3.375h6.75a3.375 3.375 0 0 0 3.375-3.375V4.125A3.375 3.375 0 0 0 15.375.75h-6.75ZM7.5 4.125C7.5 3.504 8.004 3 8.625 3H9.75v.375c0 .621.504 1.125 1.125 1.125h2.25c.621 0 1.125-.504 1.125-1.125V3h1.125c.621 0 1.125.504 1.125 1.125v15.75c0 .621-.504 1.125-1.125 1.125h-6.75A1.125 1.125 0 0 1 7.5 19.875V4.125Z"
-                  clip-rule="evenodd"></path>
-              </svg>
-              <span>Contactanos</span>
-            </button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    d="M10.5 18.75a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5h-3Z"
+                  ></path>
+                  <path
+                    fill-rule="evenodd"
+                    d="M8.625.75A3.375 3.375 0 0 0 5.25 4.125v15.75a3.375 3.375 0 0 0 3.375 3.375h6.75a3.375 3.375 0 0 0 3.375-3.375V4.125A3.375 3.375 0 0 0 15.375.75h-6.75ZM7.5 4.125C7.5 3.504 8.004 3 8.625 3H9.75v.375c0 .621.504 1.125 1.125 1.125h2.25c.621 0 1.125-.504 1.125-1.125V3h1.125c.621 0 1.125.504 1.125 1.125v15.75c0 .621-.504 1.125-1.125 1.125h-6.75A1.125 1.125 0 0 1 7.5 19.875V4.125Z"
+                    clip-rule="evenodd"></path>
+                </svg>
+                <span>Contactanos</span>
+              </button>
+            </a>
           </div>
         </div>
         <div class="hidden md:block">
