--- a/src/components/Person.astro
+++ b/src/components/Person.astro
@@ -19,7 +19,7 @@ const { name, role, picture } = Astro.props;
     />
   </div>
   <div class="mt-4 text-center">
-    <h3 class="text-lg text-neutral-800">
+    <h3 class="text-xl text-neutral-800">
       {name}
     </h3>
     <p class="text-sm text-neutral-500">
